--- a/package.json
+++ b/package.json
@@ -9,36 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.4.1",
+    "@prisma/client": "^6.3.1",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-slot": "^1.1.2",
-    "@sanity/cli": "^3.77.2",
-    "@sanity/client": "^6.28.2",
-    "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.77.2",
+    "bcryptjs": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.477.0",
-    "next": "15.2.1",
-    "next-sanity": "^9.8.61",
+    "fuse.js": "^7.1.0",
+    "lucide-react": "^0.475.0",
+    "next": "15.1.7",
+    "next-sanity": "^9.8.60",
     "nprogress": "^0.2.0",
-    "prisma": "^6.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "styled-components": "^6.1.15",
-    "tailwind-merge": "^3.0.2",
+    "react-icons": "^5.4.0",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "22.13.9",
+    "@types/node": "20.17.23",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "19.0.10",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.1",
-    "tailwindcss": "^3.4.17",
-    "typescript": "5.8.2"
+    "eslint-config-next": "15.1.7",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
