--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.3.1",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-slot": "^1.1.2",
+    "@sanity/vision": "^3.77.2",
     "bcryptjs": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
